Fri May 15 11:31:59 GMT 2015  Olly Betts <olly@survex.com>

	* perl/perl.i: Just call the existing Perl Xapian::inmemory_open()
	  function rather than defining and wrapping an inline C++
	  new3_WritableDatabase() function which calls InMemory::open().

Fri May 15 06:49:50 GMT 2015  Olly Betts <olly@survex.com>

	* perl/util.i.in: Add a "LICENSE" section to the main POD.

Fri May 15 04:50:28 GMT 2015  Olly Betts <olly@survex.com>

	* python3/pythontest.py: Expand comment about disabling
	  test_import_star under threads.

Thu May 14 13:50:24 GMT 2015  Olly Betts <olly@survex.com>

	* README: Remove the experimental markers from Lua and Python3,
	  and the note welcoming patches for Python 3.1.x support (since
	  Python 3.1.x was EOL-ed 3 years ago).

Tue May 12 07:39:04 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Fix typo.

Mon May 11 06:55:32 GMT 2015  Olly Betts <olly@survex.com>

	* doxygen_xml.conf.in,xapian-head.i: Update for addition of
	  XAPIAN_NOEXCEPT.

Sun May 10 13:27:23 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-headers.i: Update for optional reference counting of
	  FieldProcessor.

Sun May 10 11:21:55 GMT 2015  Olly Betts <olly@survex.com>

	* xapian-headers.i: Update for optional reference counting of
	  functors.

Fri May 08 11:01:03 GMT 2015  Olly Betts <olly@survex.com>

	* perl/t/: Add 'use strict' to all testcases.

Fri May 08 11:00:14 GMT 2015  Olly Betts <olly@survex.com>

	* perl/t/document.t,perl/t/writabledatabase.t: Add missing 'my'.

Fri May 08 10:55:32 GMT 2015  Olly Betts <olly@survex.com>

	* perl/perl.i: Wrap missing constants.

Fri May 08 10:54:51 GMT 2015  Olly Betts <olly@survex.com>

	* perl/perl.i,perl/t/parser.t: Wrap WILDCARD_LIMIT_* constants as
	  constants.

Fri May 08 10:48:20 GMT 2015  Olly Betts <olly@survex.com>

	* perl/t/parser.t: Update to use Test::More.

Fri May 08 09:56:52 GMT 2015  Olly Betts <olly@survex.com>

	* perl/perl.i: Remove duplicate %constant for OP_WILDCARD.
